--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
 
       </section>
       <footer>
-        PacificoTax Applications & Weblinks
-        <p><small>PacificoTax, LLC is a professional tax firm specializing in International Tax and providing services for income tax return preparation, along with consultation, tax structure, planning, and tax resolution.</p>
-        <p>Learn more at <a href="https://github.com/PacificoTax">https://github.com/PacificoTax</a></small></p>
+        PacificoTax Federal Income Tax Brackets
+        <p><small>The tax brackets shown are based on publicly available information. Taxable income on any particular individual for any particular year will vary based on a number of factors to include additional income, deductions, taxes and credits</p>
+        <p>For further information about tack brackets visit <a href="https://taxfoundation.org">https://taxfoundation.org</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
